feat: fixed extra space in classes

--- a/chat-prototype-html-css/index.html
+++ b/chat-prototype-html-css/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Chat Assistant - HTML/CC Prototype</title>
-    <link rel="stylesheet" href="stle.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!--Main chat container-->
-    <main class = "chat-container">
-        <header class = "chat-header">
+    <main class="chat-container">
+        <header class="chat-header">
             <h1>Chat Assistant</h1>
             <p class = "subtitle" > Prototype: Pure HTML/CSS (Static)</p>
         </header>
@@ -50,7 +50,7 @@
         <!--Input area - disabled since this is a static prototype-->
         <form class="input-area">
             <input type="text" placeholder="Type a message..." disabled>
-            <button type="dubmit" disabled>Send</button>
+            <button type="submit" disabled>Send</button>
         </form>
 
         <div class="notice">
